Finished APOD program.