@@ -1,11 +1,13 @@
 import java.io.*;
 import java.net.*;
 
+import org.json.JSONObject;
+
 public class Main{
 
-    public static void main(String[] args) throws IOException {
+    public static void main(String[] args) throws IOException, URISyntaxException {
         // Get the URL of the NASA Image for the Day API
-        URL url = new URL("https://api.nasa.gov/mars-photos/api/v1/rovers/curiosity/photos?earth_date=2015-6-3&api_key=DEMO_KEY");
+        URL url = new URI("https://api.nasa.gov/planetary/apod?api_key=DEMO_KEY").toURL();
         // Open a connection to the URL
         HttpURLConnection con = (HttpURLConnection) url.openConnection();
 
@@ -15,40 +17,42 @@ public class Main{
         int responseCode = con.getResponseCode();
         System.out.println("Response Code: " + responseCode);
 
-        
-        // Parse JSON data from the response without third party libraries
-        BufferedReader in = new BufferedReader(
-            new InputStreamReader(con.getInputStream()));
+        // Read the response
+        InputStreamReader streamReader = new InputStreamReader(con.getInputStream());
+        BufferedReader in = new BufferedReader(streamReader);
+        String inputLine = null;
+        StringBuffer response = new StringBuffer();
 
-        String inputLine;
-        StringBuffer content = new StringBuffer();
         // Read the response line by line
         while ((inputLine = in.readLine()) != null) {
-            content.append(inputLine);
+            response.append(inputLine);
         }
-        // Close the connection
         in.close();
-        con.disconnect();
 
-        int start = content.indexOf("img_src");
-        int end = content.indexOf(".JPG") + 4;
+        JSONObject myResponse = new JSONObject(response.toString());
+        // Print the title from the json
+        System.out.println("title: " + myResponse.getString("title"));
+
+        // Print the explanation from the json
+        System.out.println("explanation: " + myResponse.getString("explanation"));
         
-        // Get the URL of the image
-        String imageUrlString = content.substring(start + 10, end);
-        System.out.println(imageUrlString);
-        URL imageUrl = new URL(imageUrlString);
-        
-        InputStream is = imageUrl.openStream();
-        OutputStream os = new FileOutputStream("image.jpg");
-        int bytesRead = 0;
-        byte[] buffer = new byte[2048];
-        // Read the image data
-        while ((bytesRead = is.read(buffer, 0, 2048)) != -1) {
-            os.write(buffer, 0, bytesRead);
+        // Print the url from the json
+        System.out.println("url: " + myResponse.getString("url"));
+
+        // Get the image url from the json
+        String imageUrl = myResponse.getString("url");
+        // Get the file name from the url
+        String fileName = imageUrl.substring(imageUrl.lastIndexOf("/") + 1);
+        System.out.println("Downloading image: " + fileName);
+        // Download the image
+        URL urlImage = new URI(imageUrl).toURL();
+        InputStream inImage = urlImage.openStream();
+        OutputStream outImage = new BufferedOutputStream(new FileOutputStream(fileName));
+        // Write the image to the file
+        for (int i; (i = inImage.read()) != -1;) {
+            outImage.write(i);
         }
-        // Close the streams
-        is.close();
-        os.close();
-
+        outImage.close();
+        inImage.close();
     }
 }
